Put the right text for all the sections

--- a/css/main.css
+++ b/css/main.css
@@ -1072,6 +1072,11 @@ video {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 976px) {
