--- a/input.css
+++ b/input.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .globe {
-    
-    width: 100%;
-    height: 100%;
-  background: url(../img/globe.svg) no-repeat center center;
-
-} */
-/* */
+/* body{
+    background-color: #4D267D;
+    color: #fff;
+},
+ */
+/* Tailwind CSS
+gradient background bg-gradient-to-br from-[#F0CAFF] via-[#4D267D] to-[#4D267D]
+*/
