--- a/css/nft-pok-page-desktop-all-breakpoints.css
+++ b/css/nft-pok-page-desktop-all-breakpoints.css
@@ -1956,16 +1956,17 @@
   align-self: center;
   display: flex;
   margin-left: 30.38px;
+  margin-top: 30px;
   min-width: 721px;
 }
 
 .nft-pok-tablet .overlap-group-11 {
-  align-items: flex-end;
+  align-items: flex-start;
   background-color: var(--purple-mountains-majesty);
   border-radius: 10px;
   display: flex;
   height: 310px;
-  justify-content: flex-end;
+  justify-content: flex-start;
   min-width: 229px;
   padding: 0 7px;
 }
@@ -1974,6 +1975,7 @@
   letter-spacing: 0;
   line-height: 24.0px;
   min-height: 224px;
+  margin-top: 15px;
   text-align: center;
   text-shadow: 0px 4px 4px #00000040;
   width: 211px;
